   * CGDB no longer packages the generated auto tool files in CVS. However,
     the distributions will have these files. This means you will need 
     autoconf, autoheader and automake installed to compile CGDB from CVS.
   
   * CGDB now compiles according to the c89 standard. This should help with
     porting to older systems.
   
   * The file cgdb.txt is now installed into $PREFIX/share/cgdb/cgdb.txt. This
     is the file CGDB will now use to display the manual when :help is typed.
     This prevents CGDB from copying the data into the users home directory.

cgdb-0.6.2 (09/04/2006)

   * CGDB should run on solaris 2.5 again. I don't think it would since
     CGDB .6.0. 
   
   * Fixed a bug in the configure script that was probably added in .6.0
     when the large readline integration was done. It was possible for 
     readline to choose the wrong termcap library, because of a bad 
     autoconf macro that CGDB was using. This could potentially cause the
     screen to get corrupted.
   
   * Fixed a bug in the syntax highlighter for C strings. A line like
     char *s = "\""; would cause the highlighter to break and most of the
     file after that would be displayed in red (string literal color).
   
   * The message 'CGDB had unexpected results, ...' will no longer be 
     displayed when CGDB can not parse a breakpoint. This message was being
     displayed when a watchpoint was issued by the user. It does not fix any
     bugs though, just stops the message from being displayed.

cgdb-0.6.1 (03/06/2006)

   * An improvement for tab completion support. With certain versions of GDB, 
     an extra line "server complete ..." would be added to the list of 
     possible completions. This is no longer added. I believe this would
     only happen with really old versions of GDB.
   
   * Improved tab completion support in readline for quoted data. For 
     instance tab completing C++ member functions like b 'foo::b<tab>