@@ -16,7 +16,7 @@
 #define yytext c_text
 #define yywrap c_wrap
 
-#line 20 "../../../../cgdb/cgdb/tokenizer/src/clexer.c"
+#line 20 "clexer.c"
 /* A lexical scanner generated by flex */
 
 /* Scanner skeleton version:
@@ -28,7 +28,8 @@
 #define YY_FLEX_MINOR_VERSION 5
 
 #include <stdio.h>
-#include <errno.h>
+#include <unistd.h>
+
 
 /* cfront 1.2 defines "c_plusplus" instead of "__cplusplus" */
 #ifdef c_plusplus
@@ -41,9 +42,6 @@
 #ifdef __cplusplus
 
 #include <stdlib.h>
-#ifndef _WIN32
-#include <unistd.h>
-#endif
 
 /* Use prototypes in function declarations. */
 #define YY_USE_PROTOS
@@ -82,7 +80,6 @@
 #else
 #define YY_PROTO(proto) ()
 #endif
-
 
 /* Returned upon end-of-file. */
 #define YY_NULL 0
@@ -690,7 +687,7 @@ char *yytext;
 
 #define string_literal 2
 
-#line 694 "../../../../cgdb/cgdb/tokenizer/src/clexer.c"
+#line 691 "clexer.c"
 
 /* Macros after this point can all be overridden by user definitions in
  * section 1.
@@ -790,20 +787,9 @@ YY_MALLOC_DECL
 			YY_FATAL_ERROR( "input in flex scanner failed" ); \
 		result = n; \
 		} \
-	else \
-		{ \
-		errno=0; \
-		while ( (result = fread(buf, 1, max_size, yyin))==0 && ferror(yyin)) \
-			{ \
-			if( errno != EINTR) \
-				{ \
-				YY_FATAL_ERROR( "input in flex scanner failed" ); \
-				break; \
-				} \
-			errno=0; \
-			clearerr(yyin); \
-			} \
-		}
+	else if ( ((result = fread( buf, 1, max_size, yyin )) == 0) \
+		  && ferror( yyin ) ) \
+		YY_FATAL_ERROR( "input in flex scanner failed" );
 #endif
 
 /* No semi-colon after return; correct usage is to write "yyterminate();" -
@@ -849,12 +835,12 @@ YY_MALLOC_DECL
 YY_DECL
 	{
 	register yy_state_type yy_current_state;
-	register char *yy_cp, *yy_bp;
+	register char *yy_cp = NULL, *yy_bp = NULL;
 	register int yy_act;
 
 #line 18 "clexer.l"
 
-#line 858 "../../../../cgdb/cgdb/tokenizer/src/clexer.c"
+#line 844 "clexer.c"
 
 	if ( yy_init )
 		{
@@ -1432,7 +1418,7 @@ YY_RULE_SETUP
 #line 126 "clexer.l"
 ECHO;
 	YY_BREAK
-#line 1436 "../../../../cgdb/cgdb/tokenizer/src/clexer.c"
+#line 1422 "clexer.c"
 case YY_STATE_EOF(INITIAL):
 case YY_STATE_EOF(comment):
 case YY_STATE_EOF(string_literal):
@@ -1998,15 +1984,6 @@ YY_BUFFER_STATE b;
 	}
 
 
-#ifndef _WIN32
-#include <unistd.h>
-#else
-#ifndef YY_ALWAYS_INTERACTIVE
-#ifndef YY_NEVER_INTERACTIVE
-extern int isatty YY_PROTO(( int ));
-#endif
-#endif
-#endif
 
 #ifdef YY_USE_PROTOS
 void yy_init_buffer( YY_BUFFER_STATE b, FILE *file )
